force-app/main/default/objects/Cancel_Request__c/fields/Total_Opportunity_Saved__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Saved__c</fullName>
    <formula>IF( ISPICKVAL(Cancel_Request_Type__c , &quot;Trial&quot;) , (Save_MSF__c * Months_Gained__c) + (  Current_MSF__c  *  Months_Paid_Trial__c  ) , (Save_MSF__c * Months_Gained__c) - ( Current_MSF__c *  Months_Remaining_Annual__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opportunity Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>