force-app/main/default/objects/Cancel_Request__c/fields/Unavailable_Feature__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Feature__c</fullName>
    <label>Unavailable Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Cancel Appointments via Text</fullName>
            </value>
            <value>
                <fullName>Call Recording</fullName>
            </value>
            <value>
                <fullName>Insurance Billing</fullName>
            </value>
            <value>
                <fullName>Multi-lingual Messaging</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone System</fullName>
            </value>
            <value>
                <fullName>Portal Integration</fullName>
            </value>
            <value>
                <fullName>Postcards</fullName>
            </value>
            <value>
                <fullName>Pre/Post Op Message</fullName>
            </value>
            <value>
                <fullName>Pre/Post-op Messaging</fullName>
            </value>
            <value>
                <fullName>Treatment Plan Messaging</fullName>
            </value>
            <value>
                <fullName>Two Way Texting</fullName>
            </value>
            <value>
                <fullName>Voice to cell phone</fullName>
            </value>
            <value>
                <fullName>Website Hosting</fullName>
            </value>
            <value>
                <fullName>Writeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>