force-app/main/default/objects/Cancel_Request__c/recordTypes/Healthgrades.recordType-meta.xml
<RecordType>
    <fullName>Healthgrades</fullName>
    <active>true</active>
    <label>Healthgrades</label>
</RecordType>