force-app/main/default/objects/Cancel_Request__c/recordTypes/SR_Conversations.recordType-meta.xml
<RecordType>
    <fullName>SR_Conversations</fullName>
    <active>true</active>
    <label>SR Conversations</label>
</RecordType>