force-app/main/default/objects/Cancel_Request__c/recordTypes/SR_Platform.recordType-meta.xml
<RecordType>
    <fullName>SR_Platform</fullName>
    <active>true</active>
    <label>SR Platform</label>
</RecordType>