force-app/main/default/objects/Cancel_Request__c/recordTypes/SR_Schedule.recordType-meta.xml
<RecordType>
    <fullName>SR_Schedule</fullName>
    <active>true</active>
    <label>SR Schedule</label>
</RecordType>