force-app/main/default/objects/Cancel_Request__c/recordTypes/SR_Smart_Reviews.recordType-meta.xml
<RecordType>
    <fullName>SR_Smart_Reviews</fullName>
    <active>true</active>
    <label>SR Smart Reviews</label>
</RecordType>