force-app/main/default/objects/Cancel_Request__c/validationRules/Annual_Cannot_be_a_No_Sale.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Cannot_be_a_No_Sale</fullName>
    <active>true</active>
    <description>You cannot Close an Annual Cancel Request as a No Sale</description>
    <errorConditionFormula>AND(Ispickval( Cancel_Request_Type__c , &quot;Annual&quot;),
    Ispickval(Stage__c, &quot;No Sale&quot;))</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>You cannot mark an Annual Request as a No Sale.</errorMessage>
</ValidationRule>