force-app/main/default/objects/Cancel_Request__c/validationRules/Cancel_Month_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Month_is_required</fullName>
    <active>true</active>
    <description>When cancelling or No Sale Cancel Month is required</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Stage__c, &quot;Cancelled&quot;),ISPICKVAL(Stage__c, &quot;No Sale&quot;)), ISBLANK(Cancel_Month__c))</errorConditionFormula>
    <errorDisplayField>Cancel_Month__c</errorDisplayField>
    <errorMessage>You must add a Cancel Month to mark this as Cancelled or No Sale</errorMessage>
</ValidationRule>