force-app/main/default/objects/Cancel_Request__c/validationRules/Cancel_Month_is_required_when_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Month_is_required_when_Cancelled</fullName>
    <active>true</active>
    <description>Makes the Cancel Month required when you change the stage to Cancelled/No Sale</description>
    <errorConditionFormula>(ISPICKVAL(  Stage__c , &quot;Cancelled&quot;) || 
 ISPICKVAL( Stage__c , &quot;No Sale&quot;)) &amp;&amp;
 ISBLANK(  Cancel_Month__c )</errorConditionFormula>
    <errorDisplayField>Cancel_Month__c</errorDisplayField>
    <errorMessage>Cancel Month is required when you change the Stage to Cancelled/No Sale</errorMessage>
</ValidationRule>