force-app/main/default/objects/Cancel_Request__c/validationRules/Cancel_Month_on_1st_of_the_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Month_on_1st_of_the_Month</fullName>
    <active>true</active>
    <description>The Cancel Month should be on the first and only this month or the future.</description>
    <errorConditionFormula>AND(DAY(Cancel_Month__c) &lt;&gt; 1 , NOT(ISBLANK(Cancel_Month__c)))</errorConditionFormula>
    <errorDisplayField>Cancel_Month__c</errorDisplayField>
    <errorMessage>The Cancel Month must be on the first of a month</errorMessage>
</ValidationRule>