force-app/main/default/objects/Cancel_Request__c/validationRules/Cancel_Month_only_valid_when_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Month_only_valid_when_Cancelled</fullName>
    <active>true</active>
    <description>Cancel Month should only be allowed when marked as Cancelled/No Sale</description>
    <errorConditionFormula>NOT(ISPICKVAL( Stage__c , &quot;Cancelled&quot;) ) 
&amp;&amp;
NOT(ISPICKVAL( Stage__c , &quot;No Sale&quot;) ) 
&amp;&amp;
NOT( ISBLANK ( Cancel_Month__c ))</errorConditionFormula>
    <errorDisplayField>Cancel_Month__c</errorDisplayField>
    <errorMessage>You cannot add a Cancel Month until the Stage is Cancelled or No Sale</errorMessage>
</ValidationRule>