force-app/main/default/objects/Cancel_Request__c/validationRules/Cancellation_Letter.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Letter</fullName>
    <active>false</active>
    <description>Doesn&#39;t allow CR to move to cancelled unless email is updated.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, &quot;Cancelled&quot;), 
        ISBLANK(Email__c),
        RecordType.DeveloperName = &quot;SR_Platform&quot;,
        OR(Asset__r.Account.RecordType.DeveloperName=&quot;Account&quot;,
        Asset__r.Account.RecordType.DeveloperName=&quot;Child_Account&quot;))</errorConditionFormula>
    <errorMessage>Must have valid email address when updating to a cancelled stage.</errorMessage>
</ValidationRule>