force-app/main/default/objects/Cancel_Request__c/validationRules/Current_Feature_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Feature_Required</fullName>
    <active>true</active>
    <description>Requires a Current Feature if that is a Cancel Reason</description>
    <errorConditionFormula>CONTAINS(Text(Cancellation_Reasons__c), &quot;Functionality of Current Feature&quot;) &amp;&amp;  ISBLANK( Current_Feature__c  )</errorConditionFormula>
    <errorDisplayField>Current_Feature__c</errorDisplayField>
    <errorMessage>You must select at least one Current Feature</errorMessage>
</ValidationRule>