force-app/main/default/objects/Cancel_Request__c/validationRules/ET_Reason_Required_for_BK_Collections.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Reason_Required_for_BK_Collections</fullName>
    <active>true</active>
    <description>If BK/Collections is selected then the ET Reasons is required</description>
    <errorConditionFormula>ISPICKVAL (  Cancellation_Reasons__c  , &quot;Bankruptcy/Collections/Out of business&quot; ) &amp;&amp;
ISPICKVAL (  E_T_Reason__c , &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>E_T_Reason__c</errorDisplayField>
    <errorMessage>E.T. Reason is required when Bankruptcy/Collections/Out of business is selected.</errorMessage>
</ValidationRule>