force-app/main/default/objects/Cancel_Request__c/validationRules/Other_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Competitor</fullName>
    <active>true</active>
    <description>Requires a competitor is &quot;Other Competitor&quot; is selected</description>
    <errorConditionFormula>Includes( Competitor__c, &quot;Other(Note name in Other Competitor)&quot;) &amp;&amp;  Other_Competittor__c =null</errorConditionFormula>
    <errorDisplayField>Other_Competittor__c</errorDisplayField>
    <errorMessage>Please add the Other Competitor name.</errorMessage>
</ValidationRule>