force-app/main/default/objects/Cancel_Request__c/validationRules/Other_Competitor_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Competitor_2</fullName>
    <active>true</active>
    <description>Doesn&#39;t allow Other Competitor in free text field without selecting it in the picklist</description>
    <errorConditionFormula>not(includes(Competitor__c,&quot;Other(Note name in Other Competitor)&quot;)) &amp;&amp; 
 Other_Competittor__c  != null</errorConditionFormula>
    <errorDisplayField>Competitor__c</errorDisplayField>
    <errorMessage>Please add &quot;Other(Note name in Other Competitor)&quot; as a Competitor</errorMessage>
</ValidationRule>