force-app/main/default/objects/Cancel_Request__c/validationRules/Require_Cancel_Request_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancel_Request_Type</fullName>
    <active>true</active>
    <description>Makes it so Cancel Request Type is required after creation</description>
    <errorConditionFormula>AND(CreatedDate  &lt;&gt; Now(), ISPICKVAL( Cancel_Request_Type__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Cancel_Request_Type__c</errorDisplayField>
    <errorMessage>Please select Annual or Trial for Cancel Request Type.</errorMessage>
</ValidationRule>