force-app/main/default/objects/Cancel_Request__c/validationRules/Save_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Save_Info</fullName>
    <active>true</active>
    <description>Requires certain fields when closing as a Save.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, &quot;Save&quot;),
    OR(ISBLANK(Save_MSF__c),
       ISBLANK(Months_Gained__c)
    )
)</errorConditionFormula>
    <errorMessage>You must put in Save MSF and Months Gained when closing as a Save.</errorMessage>
</ValidationRule>