force-app/main/default/objects/Cancel_Request__c/validationRules/Specific_Cancel_Reasons.validationRule-meta.xml
<ValidationRule>
    <fullName>Specific_Cancel_Reasons</fullName>
    <active>true</active>
    <description>If a Cancel Reason is because of a feature, require the rep to enter in a specific reason</description>
    <errorConditionFormula>AND( OR ( ISPICKVAL( Cancellation_Reasons__c , &quot;Not satisfied - current features&quot;) , 
          ISPICKVAL( Cancellation_Reasons__c , &quot;Not satisfied - unavailable features&quot; ) ) , ISBLANK(Specific_reasons_for_unavailable_current__c) , OR(ISPICKVAL( Stage__c, &quot;Save&quot;), 
ISPICKVAL( Stage__c, &quot;No Sale&quot;), 
ISPICKVAL( Stage__c, &quot;Cancelled&quot;), 
ISPICKVAL( Stage__c, &quot;Resume No-Change&quot;) 
))</errorConditionFormula>
    <errorDisplayField>Specific_reasons_for_unavailable_current__c</errorDisplayField>
    <errorMessage>You must provide a specific reason before closing.</errorMessage>
</ValidationRule>