force-app/main/default/objects/Cancel_Request__c/validationRules/Unavailable_Feature_Only_when_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Unavailable_Feature_Only_when_Other</fullName>
    <active>true</active>
    <description>Only allow text in New Unavailable Feature when Other is selected</description>
    <errorConditionFormula>Not(Includes(Unavailable_Feature__c , &quot;Other&quot;)) &amp;&amp;  Not(ISBLANK (New_Unavailable_Feature__c ))</errorConditionFormula>
    <errorDisplayField>New_Unavailable_Feature__c</errorDisplayField>
    <errorMessage>You can only enter in a new Unavailable Feature when &quot;Other&quot; is selected</errorMessage>
</ValidationRule>