force-app/main/default/objects/Cancel_Request__c/validationRules/Unavailable_Feature_only_when_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Unavailable_Feature_only_when_selected</fullName>
    <active>true</active>
    <description>Makes it so Unavailable features can only be selected when that cancel reason is selected</description>
    <errorConditionFormula>NOT(CONTAINS(Text(Cancellation_Reasons__c), &quot;Unavailable Feature&quot;)) &amp;&amp;  NOT(ISBLANK(Unavailable_Feature__c ))</errorConditionFormula>
    <errorDisplayField>Unavailable_Feature__c</errorDisplayField>
    <errorMessage>You Cannot select an Unavailable Feature unless you&#39;ve selected that option from the Cancel Reasons</errorMessage>
</ValidationRule>