force-app/main/default/objects/Cancel_Request__c/validationRules/Unavailable_Feature_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Unavailable_Feature_Required</fullName>
    <active>true</active>
    <description>Requires an Unavailable Feature if that is a Cancel Reason</description>
    <errorConditionFormula>CONTAINS(Text(Cancellation_Reasons__c), &quot;Unavailable Feature&quot;) &amp;&amp;  ISBLANK(Unavailable_Feature__c )</errorConditionFormula>
    <errorDisplayField>Unavailable_Feature__c</errorDisplayField>
    <errorMessage>You must select at least one Unavailable Feature</errorMessage>
</ValidationRule>