force-app/main/default/objects/Cancel_Request__c/validationRules/Waived_Months_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Waived_Months_Accepted</fullName>
    <active>true</active>
    <description>Requires a number when marking Wavied Months Offered as Accepted</description>
    <errorConditionFormula>AND (ISPICKVAL( Save_Offer_Waived_Months__c , &quot;Accepted&quot;) , ISNULL (Number_of_waived_months_offered__c ))</errorConditionFormula>
    <errorDisplayField>Number_of_waived_months_offered__c</errorDisplayField>
    <errorMessage>You must provide the number of free months if the offer was accepted</errorMessage>
</ValidationRule>