force-app/main/default/objects/Cancel_Request__c/listViews/Annual_SR_requests2.listView-meta.xml
<ListView>
    <fullName>Annual_SR_requests2</fullName>
    <columns>Cancel_Request_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Projected_Contract_Expiration_Renewal__c</columns>
    <columns>Stage__c</columns>
    <columns>Current_MSF__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>SR Platform</value>
    </filters>
    <filters>
        <field>Cancel_Request_Type__c</field>
        <operation>equals</operation>
        <value>Annual</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,No Sale,Save,Resume - No Change</value>
    </filters>
    <filters>
        <field>Cancel_Request_Date__c</field>
        <operation>greaterThan</operation>
        <value>5/15/2018</value>
    </filters>
    <label>Annual SR requests since 5/15</label>
    <sharedTo>
        <group>Client_Engagement</group>
    </sharedTo>
</ListView>