force-app/main/default/objects/Cancel_Request__c/listViews/Canceled_Staff_Resistance.listView-meta.xml
<ListView>
    <fullName>Canceled_Staff_Resistance</fullName>
    <columns>Cancellation_Reasons__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Processed_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Cancellation_Reasons__c</field>
        <operation>equals</operation>
        <value>Staff Change/Resistance</value>
    </filters>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>SR Platform</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Canceled - Staff Resistance</label>
    <sharedTo>
        <group>Client_Engagement</group>
    </sharedTo>
</ListView>