force-app/main/default/objects/Cancel_Request__c/listViews/Disputes.listView-meta.xml
<ListView>
    <fullName>Disputes</fullName>
    <columns>Cancel_Request_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Projected_Contract_Expiration_Renewal__c</columns>
    <columns>Stage__c</columns>
    <columns>Current_MSF__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>SR Platform</value>
    </filters>
    <filters>
        <field>Cancel_Request_Type__c</field>
        <operation>equals</operation>
        <value>Annual</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,No Sale,Save,Resume - No Change</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Client Dispute</value>
    </filters>
    <label>Disputes</label>
    <sharedTo>
        <group>Client_Engagement</group>
    </sharedTo>
</ListView>