force-app/main/default/objects/Cancel_Request__c/listViews/Hot_List.listView-meta.xml
<ListView>
    <fullName>Hot_List</fullName>
    <columns>Stage__c</columns>
    <columns>Projected_Contract_Expiration_Renewal__c</columns>
    <columns>Cancel_Request_Type__c</columns>
    <columns>Asset__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Cancel_Request_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>contains</operation>
        <value>Made Offer,Pending Save,Sent Addendum</value>
    </filters>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>SR Platform</value>
    </filters>
    <label>Hot List</label>
    <sharedTo>
        <group>Client_Engagement</group>
    </sharedTo>
</ListView>