force-app/main/default/objects/Cancel_Request__c/listViews/Integration_cancels.listView-meta.xml
<ListView>
    <fullName>Integration_cancels</fullName>
    <columns>Stage__c</columns>
    <columns>Projected_Contract_Expiration_Renewal__c</columns>
    <columns>Cancel_Request_Type__c</columns>
    <columns>Asset__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Cancel_Request_Date__c</columns>
    <columns>Cancellation_Reasons__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>contains</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>SR Platform</value>
    </filters>
    <filters>
        <field>Cancellation_Reasons__c</field>
        <operation>equals</operation>
        <value>No Integration,Export</value>
    </filters>
    <label>Integration cancels</label>
</ListView>