force-app/main/default/objects/Cancel_Request__c/listViews/New_SR_CRO_s.listView-meta.xml
<ListView>
    <fullName>New_SR_CRO_s</fullName>
    <columns>Stage__c</columns>
    <columns>Projected_Contract_Expiration_Renewal__c</columns>
    <columns>Cancel_Request_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Cancel_Request_Date__c</columns>
    <columns>Current_MSF__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>SR Platform</value>
    </filters>
    <label>New SR CRO&#39;s</label>
    <sharedTo>
        <group>Client_Engagement</group>
    </sharedTo>
</ListView>